Fix: Links Contrast

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body {
     width: 100%;
 }
 
+a{
+    color: var(--gray);
+}
+
 header {
     gap: var(--sp-1);
     border-bottom: 1px solid var(--solid-gray);
